[gd_scene load_steps=11 format=3 uid="uid://byqvxvh1ldf42"]

[ext_resource type="Shader" path="res://ui/blur.gdshader" id="1_lqwxr"]
[ext_resource type="Script" path="res://ui/pause_menu.gd" id="2_7qlih"]
[ext_resource type="Theme" uid="uid://b8xw3k8erq8w0" path="res://ui/ui_theme.tres" id="2_mq7eq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_644s1"]
shader = ExtResource("1_lqwxr")
shader_parameter/blur = 0.0
shader_parameter/brightness = 1.0

[sub_resource type="InputEventAction" id="InputEventAction_6dejt"]
action = &"ui_cancel"
pressed = true

[sub_resource type="Shortcut" id="Shortcut_ne8fp"]
events = [SubResource("InputEventAction_6dejt")]

[sub_resource type="Animation" id="Animation_ijwkm"]
resource_name = "Pause"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [2.5]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.75]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_08rua"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_v40he"]
resource_name = "Unpause"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:material:shader_parameter/blur")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:material:shader_parameter/brightness")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CenterContainer:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w1tcb"]
_data = {
"Pause": SubResource("Animation_ijwkm"),
"RESET": SubResource("Animation_08rua"),
"Unpause": SubResource("Animation_v40he")
}

[node name="PauseMenu" type="ColorRect"]
process_mode = 3
material = SubResource("ShaderMaterial_644s1")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("2_7qlih")

[node name="CenterContainer" type="CenterContainer" parent="."]
modulate = Color(1, 1, 1, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
custom_minimum_size = Vector2(512, 256)
offset_left = 256.0
offset_top = 248.0
offset_right = 768.0
offset_bottom = 519.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_mq7eq")

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
offset_left = 7.0
offset_top = 7.0
offset_right = 505.0
offset_bottom = 264.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
offset_left = 16.0
offset_top = 8.0
offset_right = 482.0
offset_bottom = 241.0
theme_override_constants/separation = 8

[node name="HeaderLabel" type="Label" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
offset_right = 466.0
offset_bottom = 33.0
theme = ExtResource("2_mq7eq")
theme_override_font_sizes/font_size = 24
text = "Pause"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 41.0
offset_right = 466.0
offset_bottom = 45.0

[node name="ResumeButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 53.0
offset_right = 466.0
offset_bottom = 97.0
size_flags_vertical = 3
theme = ExtResource("2_mq7eq")
theme_override_font_sizes/font_size = 24
shortcut_in_tooltip = false
shortcut = SubResource("Shortcut_ne8fp")
text = "Resume"

[node name="SettingsButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
offset_top = 105.0
offset_right = 466.0
offset_bottom = 149.0
size_flags_vertical = 3
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
offset_top = 157.0
offset_right = 466.0
offset_bottom = 233.0
theme_override_constants/margin_top = 32

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
offset_top = 32.0
offset_right = 466.0
offset_bottom = 76.0
size_flags_vertical = 3
theme = ExtResource("2_mq7eq")
theme_override_font_sizes/font_size = 24
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Unpause"
libraries = {
"": SubResource("AnimationLibrary_w1tcb")
}
